cargo_check_multi.log
warning: variable does not need to be mutable
  --> crates/forge-search/src/content.rs:54:13
   |
54 |         let mut results = Vec::new();
   |             ----^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: `forge-search` (lib) generated 1 warning (run `cargo fix --lib -p forge-search` to apply 1 suggestion)
warning: unused import: `Pixel`
 --> crates/forge-test-tools/src/screenshot.rs:1:24
  |
1 | use image::{RgbaImage, Pixel};
  |                        ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `ElementState` and `MouseButton`
 --> crates/forge-test-tools/src/input_sim.rs:1:20
  |
1 | use winit::event::{ElementState, MouseButton, WindowEvent};
  |                    ^^^^^^^^^^^^  ^^^^^^^^^^^

warning: `forge-test-tools` (lib) generated 2 warnings (run `cargo fix --lib -p forge-test-tools` to apply 2 suggestions)
    Checking forge-app v0.1.0 (/app/crates/forge-app)
error[E0424]: expected value, found module `self`
    --> crates/forge-app/src/application.rs:2295:40
     |
2112 |     fn handle_input(
     |        ------------ this function doesn't have a `self` parameter
...
2295 |                                     if self.modifiers.alt_key() {
     |                                        ^^^^ `self` value is a keyword only available in methods with a `self` parameter
     |
help: add a `self` receiver parameter to make the associated `fn` a method
     |
2113 |         &self, state: &mut AppState,
     |         ++++++

warning: variable does not need to be mutable
   --> crates/forge-app/src/application.rs:371:13
    |
371 |         let mut file_explorer = crate::file_explorer::FileExplorer::new();
    |             ----^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0424`.
warning: `forge-app` (bin "forge") generated 1 warning
error: could not compile `forge-app` (bin "forge") due to 1 previous error; 1 warning emitted
